salesforce/assignment/force-app/main/default/objects/survey_response__c/survey_response__c.object-meta.xml
<CustomObject>
    <label>survey response</label>
    <nameField>
        <label>survey response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>survey responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>