salesforce/assignment/force-app/main/default/objects/survey_response__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>survey responses</relationshipLabel>
    <relationshipName>survey_responses</relationshipName>
    <type>Lookup</type>
</CustomField>