salesforce/assignment/force-app/main/default/objects/survey_response__c/fields/response_date__c.field-meta.xml
<CustomField>
    <fullName>response_date__c</fullName>
    <label>response date</label>
    <type>Date</type>
</CustomField>