salesforce/assignment/force-app/main/default/objects/survey_response__c/fields/survey_question__c.field-meta.xml
<CustomField>
    <fullName>survey_question__c</fullName>
    <label>survey question</label>
    <length>50</length>
    <type>Text</type>
</CustomField>